--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,20 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+footer {
+  border-top: 1px solid white;
+}
+
+.box {
+  border: 1px solid white;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+#movie-list {
+  margin-top: 3em;
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
