--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,16 @@ footer {
 
 #movie-list {
   margin-top: 3em;
+  padding: 2em;
+}
+
+.badge {
+  background-color: #535bf2;
+  color: #fff;
+  border-radius: 0.5rem;
+  max-width: 200px;
+  margin: 1rem auto;
+  padding: 0.2rem;
 }
 
 /* @media (prefers-color-scheme: light) {
